fix section alignment

--- a/styleSheets/resume.css
+++ b/styleSheets/resume.css
@@ -10,6 +10,7 @@ html, body {
   font-weight: 100;
   color: black;
   font-size: 2.7vw;
+  text-align: center;
 }
 
 @media only screen and (min-width: 769px){
